--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,36 @@
     </div>
   </div>
 
+  <div class="container">
+
+    <div class="services">
+      <div class="services__head">
+      <h2 class="services__h2">Основные типы услуг</h2>
+      <button class="services__btn">Заказать услугу</button>
+    </div>
+
+    <div class="services__columns">
+      <div class="services__column">
+        <img src="./img/services/Lift and shift.png" alt="Lift and shift">
+        <div class="services__column_head">Lift and shift</div>
+        <div class="services__column_descr">Миграция «как есть». По сути мы просто меняем хостинг. Работаем по вашему плану</div>
+      </div>
+
+      <div class="services__column">
+        <img src="./img/services/Lift and shift.png" alt="Lift and shift">
+        <div class="services__column_head">Lift and shift</div>
+        <div class="services__column_descr">Миграция «как есть». По сути мы просто меняем хостинг. Работаем по вашему плану</div>
+      </div>
+
+      <div class="services__column">
+        <img src="./img/services/Lift and shift.png" alt="Lift and shift">
+        <div class="services__column_head">Lift and shift</div>
+        <div class="services__column_descr">Миграция «как есть». По сути мы просто меняем хостинг. Работаем по вашему плану</div>
+      </div>
+    </div>
+    </div>
+  </div>
+
 
   <script src="js/main.js"></script>
 </body>
