--- a/src/index.html
+++ b/src/index.html
@@ -77,29 +77,85 @@
 
     <div class="services">
       <div class="services__head">
-      <h2 class="services__h2">Основные типы услуг</h2>
-      <button class="services__btn">Заказать услугу</button>
+        <h2 class="services__h2">Основные типы услуг</h2>
+        <button class="services__btn">Заказать услугу</button>
+      </div>
+
+      <div class="services__columns">
+        <div class="services__column">
+          <img src="./img/services/Lift and shift.png" alt="Lift and shift">
+          <div class="services__column_head">Lift and shift</div>
+          <div class="services__column_descr">Миграция «как есть». По сути мы просто меняем хостинг. Работаем по вашему
+            плану</div>
+        </div>
+
+        <div class="services__column">
+          <img src="./img/services/Refactor.png" alt="Lift and shift">
+          <div class="services__column_head">Refactor</div>
+          <div class="services__column_descr">Частичная модификация сервиса чтобы лучше использовать новую платформу
+          </div>
+        </div>
+
+        <div class="services__column">
+          <img src="./img/services/Replatform.png" alt="Lift and shift">
+          <div class="services__column_head">Replatform</div>
+          <div class="services__column_descr">Миграция сервиса без значительных изменений, но используя возможности
+            и преимущества новой платформы</div>
+        </div>
+      </div>
     </div>
 
-    <div class="services__columns">
-      <div class="services__column">
-        <img src="./img/services/Lift and shift.png" alt="Lift and shift">
-        <div class="services__column_head">Lift and shift</div>
-        <div class="services__column_descr">Миграция «как есть». По сути мы просто меняем хостинг. Работаем по вашему плану</div>
-      </div>
+  </div>
 
-      <div class="services__column">
-        <img src="./img/services/Lift and shift.png" alt="Lift and shift">
-        <div class="services__column_head">Lift and shift</div>
-        <div class="services__column_descr">Миграция «как есть». По сути мы просто меняем хостинг. Работаем по вашему плану</div>
+  <div class="approach">
+    <div class="container">
+      <div class="approach__head">
+        <div class="approach__head_h2">Наш подход к миграции IT сервисов</div>
+        <button class="approach__head_btn">Заказать услугу</button>
       </div>
+      <hr class="menu__hr-under">
 
-      <div class="services__column">
-        <img src="./img/services/Lift and shift.png" alt="Lift and shift">
-        <div class="services__column_head">Lift and shift</div>
-        <div class="services__column_descr">Миграция «как есть». По сути мы просто меняем хостинг. Работаем по вашему плану</div>
+      <div class="approach__row">
+        <div class="approach__column">
+          <div class="approach__column_progressbar"> 
+            <div class="approach__column_slash">//A</div>
+          <div class="approach__column_progressbar-1"></div>
+        </div>
+         
+          <div class="approach__column_header">Без vendor lock</div>
+          <div class="approach__column_descr">Используем open source решения в построении инфраструктуры. Никаких доп
+            затрат на лицензии, техподдержку и консультантов</div>
+        </div>
+
+        <div class="approach__column">
+          <div class="approach__column_slash">//B</div>
+          <div class="approach__column_progressbar-2"></div>
+          <div class="approach__column_header">Тестирование</div>
+          <div class="approach__column_descr">Проверяем что система работает корректно, если нужно — проверяем её на
+            отказоустойчивость</div>
+        </div>
       </div>
-    </div>
+      <hr class="menu__hr-under">
+
+      <div class="approach__row">
+        <div class="approach__column">
+          <div class="approach__column_slash">//C</div>
+          <div class="approach__column_progressbar-3"></div>
+          <div class="approach__column_header">Документирование</div>
+          <div class="approach__column_descr">После миграции готовим описание архитектуры чтобы ничего не забыть и ваши
+            специалисты могли быстро разобраться</div>
+        </div>
+
+        <div class="approach__column">
+          <div class="approach__column_slash">//D</div>
+          <div class="approach__column_progressbar-4"></div>
+          <div class="approach__column_header">Безопасность и работа с командой</div>
+          <div class="approach__column_descr">Учитываем ваши приоритеты и особенности задачи, думаем о безопасности в
+            условиях новой инфраструктуры</div>
+        </div>
+      </div>
+      <hr class="menu__hr-under">
+
     </div>
   </div>
 
