--- a/src/index.html
+++ b/src/index.html
@@ -159,6 +159,45 @@
     </div>
   </div>
 
+  <div class="migration">
+    <div class="container">
+      <div class="migration__head">
+        <div class="migration__h2">Шаги миграции</div>
+        <!-- <div class="migration__btn">Заказать услугу</div> -->
+        <button class="services__btn">Заказать услугу</button>
+      </div>
+
+      <div class="migration__grid">
+        <div class="migration__grid_element">
+          <img src="./img/migration/workplace-team-cooperation-businesswoman-laptop-office 1.png" alt="investigation">
+          <div class="migration__grid_element-header">//01 Исследование и оценка</div>
+          <div class="migration__grid_element-descr">Выбираем локацию в России или за рубежом и совместно с вами ставим бизнес-задачи. Затем проводим аудит системной инфраструктуры и подбираем хостеров в соответствии с ними</div>
+        </div>
+
+        <div class="migration__grid_element">
+          <img src="./img/migration/computer-program-coding-screen 1.png" alt="investigation">
+          <div class="migration__grid_element-header">//02 Проектирование</div>
+          <div class="migration__grid_element-descr">Разрабатываем архитектуру новой инфраструктуры в облаке или для хостинга. Стендируем будущее решение и делаем оценку стоимости владения, затем разрабатываем техзадание</div>
+        </div>
+
+        <div class="migration__grid_element">
+          <img src="./img/migration/annie_spratt_Qckxruozj_Rg_unsplash_87da4c3b45 1.png" alt="investigation">
+          <div class="migration__grid_element-header">//03 Миграция</div>
+          <div class="migration__grid_element-descr">Настраиваем инфраструктуру, осуществляем процесс миграции проекта в новую инфраструктуру. Адаптируем под неё внутренние процессы проекта (ETL, выполнение cron-заданий, резервное копирование и т.д.). Делаем ревизию CI/CD-процессов</div>
+        </div>
+
+        <div class="migration__grid_element">
+          <img src="./img/migration/closeup-working-table-workplace-office 1.png" alt="investigation">
+          <div class="migration__grid_element-header">//04 Тестирование и документирование</div>
+          <div class="migration__grid_element-descr">Проводим нагрузочное тестирование и описываем новую архитектуру системы. 
+            Документируем работу внутренних процессов</div>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+
 
   <script src="js/main.js"></script>
 </body>
