--- a/src/index.html
+++ b/src/index.html
@@ -110,8 +110,8 @@
   <div class="approach">
     <div class="container">
       <div class="approach__head">
-        <div class="approach__head_h2">Наш подход к миграции IT сервисов</div>
-        <button class="approach__head_btn">Заказать услугу</button>
+        <div class="approach__h2">Наш подход к миграции IT сервисов</div>
+        <button class="approach__btn">Заказать услугу</button>
       </div>
       <hr class="menu__hr-under">
 
@@ -171,30 +171,123 @@
         <div class="migration__grid_element">
           <img src="./img/migration/workplace-team-cooperation-businesswoman-laptop-office 1.png" alt="investigation">
           <div class="migration__grid_element-header">//01 Исследование и оценка</div>
+          <div class="migration__grid_element-progresbar-1"></div>
           <div class="migration__grid_element-descr">Выбираем локацию в России или за рубежом и совместно с вами ставим бизнес-задачи. Затем проводим аудит системной инфраструктуры и подбираем хостеров в соответствии с ними</div>
         </div>
 
         <div class="migration__grid_element">
           <img src="./img/migration/computer-program-coding-screen 1.png" alt="investigation">
           <div class="migration__grid_element-header">//02 Проектирование</div>
+          <div class="migration__grid_element-progresbar-2"></div>
           <div class="migration__grid_element-descr">Разрабатываем архитектуру новой инфраструктуры в облаке или для хостинга. Стендируем будущее решение и делаем оценку стоимости владения, затем разрабатываем техзадание</div>
         </div>
 
         <div class="migration__grid_element">
           <img src="./img/migration/annie_spratt_Qckxruozj_Rg_unsplash_87da4c3b45 1.png" alt="investigation">
           <div class="migration__grid_element-header">//03 Миграция</div>
+          <div class="migration__grid_element-progresbar-3"></div>
           <div class="migration__grid_element-descr">Настраиваем инфраструктуру, осуществляем процесс миграции проекта в новую инфраструктуру. Адаптируем под неё внутренние процессы проекта (ETL, выполнение cron-заданий, резервное копирование и т.д.). Делаем ревизию CI/CD-процессов</div>
         </div>
 
         <div class="migration__grid_element">
           <img src="./img/migration/closeup-working-table-workplace-office 1.png" alt="investigation">
           <div class="migration__grid_element-header">//04 Тестирование и документирование</div>
+          <div class="migration__grid_element-progresbar-4"></div>
           <div class="migration__grid_element-descr">Проводим нагрузочное тестирование и описываем новую архитектуру системы. 
             Документируем работу внутренних процессов</div>
         </div>
       </div>
+      <div class="migration__blackline"></div>
 
+      <div class="migration__head_second">
+        <div class="migration__h2">Результат</div>
+        <!-- <div class="migration__btn">Заказать услугу</div> -->
+        <button class="services__btn">Заказать услугу</button>
+      </div>
 
+      <div class="migration__columns">
+        <div class="migration__column">
+          <img src="./img/migration/01.png" alt="1">
+          <div class="migration__column_descr">Система успешно интегрировала и работает «как раньше»</div>
+        </div>
+
+        <div class="migration__column">
+          <img src="./img/migration/02.png" alt="2">
+          <div class="migration__column_descr">Комплект документов по новой архитектуре, инфораструктуре, улучшениях и изменениях
+          </div>
+        </div>
+
+        <div class="migration__column">
+          <img src="./img/migration/03.png" alt="3">
+          <div class="migration__column_descr">Отсутствие потерь данных и даунтаймов</div>
+        </div>
+
+        <div class="migration__column">
+          <img src="./img/migration/04.png" alt="4">
+          <div class="migration__column_descr">Надежный процесс резервирования</div>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+
+  <div class="costs">
+    <div class="container">
+      <div class="row">
+        <div class="costs__columns col-xl-6">
+          <div class="costs__columns_h2">Составляющие стоимости
+            миграции</div>
+            <button class="costs__columns_btn">Заказать оценку бесплатно</button>
+            <img src="./img/Mask group.png" alt="Mask group">
+        </div>
+        
+
+        <div class="costs__columns col-xl-6">
+          <div class="costs__columns_item">
+            <hr class="costs__columns_item-hr">
+            <div class="costs__columns_item-name">// SLA, предоставляемый сервисом конечным пользователям</div>
+            <hr class="costs__columns_item-hr">
+          </div>
+
+          <div class="costs__columns_item">
+            <hr class="costs__columns_item-hr">
+            <div class="costs__columns_item-name">// Потребность в бесшовной миграции</div>
+            <hr class="costs__columns_item-hr">
+          </div>
+
+          <div class="costs__columns_item">
+            <hr class="costs__columns_item-hr">
+            <div class="costs__columns_item-name">// Объем мигрируемых данных</div>
+            <hr class="costs__columns_item-hr">
+          </div>
+
+          <div class="costs__columns_item">
+            <hr class="costs__columns_item-hr">
+            <div class="costs__columns_item-name">// Сложность CI\CD процессов</div>
+            <hr class="costs__columns_item-hr">
+          </div>
+
+          <div class="costs__columns_item">
+            <hr class="costs__columns_item-hr">
+            <div class="costs__columns_item-name">// Сложность и количество ETL процессов</div>
+            <hr class="costs__columns_item-hr">
+          </div>
+
+          <div class="costs__columns_item">
+            <hr class="costs__columns_item-hr">
+            <div class="costs__columns_item-name">// Количество серверов, используемых внешних сервисов</div>
+            <hr class="costs__columns_item-hr">
+          </div>
+
+          <div class="costs__columns_item">
+            <hr class="costs__columns_item-hr">
+            <div class="costs__columns_item-name">// Потребность в дополнительных опциях логирования, мониторинга, и т.п.</div>
+            <hr class="costs__columns_item-hr">
+          </div>
+
+        </div>
+      </div>
     </div>
   </div>
 
