--- a/src/index.html
+++ b/src/index.html
@@ -94,6 +94,7 @@
         <div class="services__column">
           <img src="./img/services/Lift and shift.png" alt="Lift and shift">
           <div class="services__column_head">Lift and shift</div>
+          <div class="services__redsquare"></div>
           <div class="services__column_descr">Миграция «как есть». По сути мы просто меняем хостинг. Работаем по вашему
             плану</div>
         </div>
@@ -101,6 +102,7 @@
         <div class="services__column">
           <img src="./img/services/Refactor.png" alt="Lift and shift">
           <div class="services__column_head">Refactor</div>
+          <div class="services__redsquare"></div>
           <div class="services__column_descr">Частичная модификация сервиса чтобы лучше использовать новую платформу
           </div>
         </div>
@@ -108,6 +110,7 @@
         <div class="services__column">
           <img src="./img/services/Replatform.png" alt="Lift and shift">
           <div class="services__column_head">Replatform</div>
+          <div class="services__redsquare"></div>
           <div class="services__column_descr">Миграция сервиса без значительных изменений, но используя возможности
             и преимущества новой платформы</div>
         </div>
@@ -181,7 +184,7 @@
       </div>
 
       <div class="migration__grid">
-        <div class="migration__grid_element col-md-6">
+        <div class="migration__grid_element">
           <img src="./img/migration/workplace-team-cooperation-businesswoman-laptop-office 1.png" alt="investigation">
           <div class="migration__grid_element-header">//01 Исследование и оценка</div>
           <div class="migration__grid_element-progresbar-1"></div>
@@ -190,7 +193,7 @@
           </div>
         </div>
 
-        <div class="migration__grid_element col-md-6">
+        <div class="migration__grid_element">
           <img src="./img/migration/computer-program-coding-screen 1.png" alt="investigation">
           <div class="migration__grid_element-header">//02 Проектирование</div>
           <div class="migration__grid_element-progresbar-2"></div>
@@ -199,7 +202,7 @@
           </div>
         </div>
 
-        <div class="migration__grid_element col-md-6">
+        <div class="migration__grid_element">
           <img src="./img/migration/annie_spratt_Qckxruozj_Rg_unsplash_87da4c3b45 1.png" alt="investigation">
           <div class="migration__grid_element-header">//03 Миграция</div>
           <div class="migration__grid_element-progresbar-3"></div>
@@ -208,7 +211,7 @@
             резервное копирование и т.д.). Делаем ревизию CI/CD-процессов</div>
         </div>
 
-        <div class="migration__grid_element col-md-6">
+        <div class="migration__grid_element">
           <img src="./img/migration/closeup-working-table-workplace-office 1.png" alt="investigation">
           <div class="migration__grid_element-header">//04 Тестирование и документирование</div>
           <div class="migration__grid_element-progresbar-4"></div>
