--- a/src/index.html
+++ b/src/index.html
@@ -318,6 +318,7 @@
 
   <div class="footer" id="contacts">
     <div class="container">
+      <div class="footer__wrapper">
       <div class="row">
         <div class="footer__columns">
           <div class="footer__columns_h2">Оставить заявку</div>
@@ -373,7 +374,7 @@
         <div class="footer__copyright">© Все права защищены. ООО «Астера» 2014 - 2022</div>
         <a href="#" class="footer__polycy">Политика обработки персональных данных</a>
       </div>
-      
+    </div>
     </div>
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> -->
