--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Astera</title>
+  
   <!-- <link rel="stylesheet" href="./css/main.css"> -->
   <link rel="icon" type="image/png" sizes="32x32" href="./img/logo/32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./img/logo/16.png">
@@ -70,7 +71,7 @@
 
           </div>
 
-          <div class="dropdown">
+          <!-- <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown button
             </button>
@@ -81,14 +82,14 @@
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Separated link</a></li>
             </ul>
-          </div>
+          </div> -->
 
           <hr class="menu__hr">
-          <a href="#"><img src="./icons/Vector.png" alt="logo" class="menu__icon"></a>
+          <a href="#"><img src="./icons/Vector.svg" alt="logo" class="menu__icon"></a>
           <div id="vision" class="hamburger">
-            <span class="hamburger__hover"></span>
-            <span class="hamburger__hover"></span>
-            <span class="hamburger__hover"></span>
+            <div class="hamburger__hover"></div>
+            <div class="hamburger__hover"></div>
+            <div class="hamburger__hover"></div>
           </div>
         </nav>
 
@@ -114,8 +115,8 @@
           <div class="itmigration__descr">Перенесем ваши сервисы между любыми платформами или облачными провайдерами
           </div>
           <div class="itmigration__arrows">
-            <a href="#"><img src="./img/arrows/Arrow 1 (Stroke).png" alt="arrows"></a>
-            <a href="#"><img src="./img/arrows/Arrow 1 (Stroke)-1.png" alt="arrows"></a>
+            <a href="#"><img src="./img/arrows/Arrow 1 (Stroke).svg" alt="arrows"></a>
+            <a href="#"><img src="./img/arrows/Arrow 1 (Stroke)-1.svg" alt="arrows"></a>
           </div>
         </div>
 
