--- a/src/index.html
+++ b/src/index.html
@@ -411,12 +411,12 @@
               <div class="footer__triggers">
                 <button class="footer__btn">Отправить</button>
                 <div class="footer__policy" id="policy">
-                  <!-- <label for="checkbox1"> -->
+                  <label>
                   <input required type="checkbox" id="checkbox1">
                   
                   <span>Нажимая на кнопку, вы даете согласие на отправку
                     и <a href="/policy.html">обработку своих персональных данных</a></span>
-                  <!-- </label> -->
+                  </label>
                 </div>
               </div>
             </form>
