--- a/src/index.html
+++ b/src/index.html
@@ -12,51 +12,54 @@
 </head>
 
 <body>
-  <menu class="hiddenmenu">
-    <div class="hiddenmenu__block">
-      <div class="hiddenmenu__close">
-        <svg width="29" height="30" viewbox="0 0 29 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M17.1568 14.5231L28.4489 3.23075C29.1837 2.49623 29.1837 1.30861 28.4489 0.574085C27.7144 -0.160437 26.5267 -0.160437 25.7922 0.574085L14.4998 11.8665L3.20781 0.574085C2.47295 -0.160437 1.28567 -0.160437 0.551149 0.574085C-0.183716 1.30861 -0.183716 2.49623 0.551149 3.23075L11.8432 14.5231L0.551149 25.8155C-0.183716 26.55 -0.183716 27.7376 0.551149 28.4721C0.917206 28.8385 1.39852 29.0226 1.87948 29.0226C2.36045 29.0226 2.84141 28.8385 3.20781 28.4721L14.4998 17.1798L25.7922 28.4721C26.1586 28.8385 26.6396 29.0226 27.1205 29.0226C27.6015 29.0226 28.0825 28.8385 28.4489 28.4721C29.1837 27.7376 29.1837 26.55 28.4489 25.8155L17.1568 14.5231Z"
-            fill="white" />
-        </svg>
+  
 
+  <div class="background__header" id="menu">
+
+    <menu class="hiddenmenu">
+      <div class="hiddenmenu__block">
+        <div class="hiddenmenu__close">
+          <svg width="29" height="30" viewbox="0 0 29 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M17.1568 14.5231L28.4489 3.23075C29.1837 2.49623 29.1837 1.30861 28.4489 0.574085C27.7144 -0.160437 26.5267 -0.160437 25.7922 0.574085L14.4998 11.8665L3.20781 0.574085C2.47295 -0.160437 1.28567 -0.160437 0.551149 0.574085C-0.183716 1.30861 -0.183716 2.49623 0.551149 3.23075L11.8432 14.5231L0.551149 25.8155C-0.183716 26.55 -0.183716 27.7376 0.551149 28.4721C0.917206 28.8385 1.39852 29.0226 1.87948 29.0226C2.36045 29.0226 2.84141 28.8385 3.20781 28.4721L14.4998 17.1798L25.7922 28.4721C26.1586 28.8385 26.6396 29.0226 27.1205 29.0226C27.6015 29.0226 28.0825 28.8385 28.4489 28.4721C29.1837 27.7376 29.1837 26.55 28.4489 25.8155L17.1568 14.5231Z"
+              fill="white" />
+          </svg>
+  
+        </div>
+        <div>
+          <ul class="title hiddenmenu__list">
+            <li class="hiddenmenu__link"><a href="#services">Услуги</a></li>
+            <li class="hiddenmenu__link"><a href="#approach">Подход</a></li>
+            <li class="hiddenmenu__link"><a href="#steps">Шаги</a></li>
+            <li class="hiddenmenu__link"><a href="#result">Результат</a></li>
+            <li class="hiddenmenu__link"><a href="#costs">Стоимость</a></li>
+            <li class="hiddenmenu__link"><a href="#contacts">Контакты</a></li>
+          </ul>
+        </div>
+        <div class="hiddenmenu__sotial">
+          <a class="hiddenmenu__sotial_link" href="#">
+            <img src="./icons/social/email.png" alt="whatsapp">
+  
+          </a>
+          <a class="hiddenmenu__sotial_link" href="#">
+            <img src="./icons/social/viber.png" alt="email">
+          </a>
+          <a class="hiddenmenu__sotial_link" href="#">
+            <img src="./icons/social/whatsapp.png" alt="viber">
+  
+          </a>
+        </div>
       </div>
-      <div>
-        <ul class="title hiddenmenu__list">
-          <li class="hiddenmenu__link"><a href="#services">Услуги</a></li>
-          <li class="hiddenmenu__link"><a href="#approach">Подход</a></li>
-          <li class="hiddenmenu__link"><a href="#steps">Шаги</a></li>
-          <li class="hiddenmenu__link"><a href="#result">Результат</a></li>
-          <li class="hiddenmenu__link"><a href="#costs">Стоимость</a></li>
-          <li class="hiddenmenu__link"><a href="#contacts">Контакты</a></li>
-        </ul>
-      </div>
-      <div class="hiddenmenu__sotial">
-        <a class="hiddenmenu__sotial_link" href="#">
-          <img src="./icons/social/email.png" alt="whatsapp">
+      <div class="hiddenmenu__overlay"></div>
+    </menu>
 
-        </a>
-        <a class="hiddenmenu__sotial_link" href="#">
-          <img src="./icons/social/viber.png" alt="email">
-        </a>
-        <a class="hiddenmenu__sotial_link" href="#">
-          <img src="./icons/social/whatsapp.png" alt="viber">
-
-        </a>
-      </div>
-    </div>
-    <div class="hiddenmenu__overlay"></div>
-  </menu>
-
-  <div class="background__header">
     <div class="container">
       <header>
         <nav>
 
           <img src="./img/logo/astera_logo.png" alt="logo" class="menu__logo_img">
 
-          <ul class="menu" id="menu">
+          <ul class="menu" >
             <li class="menu_item"> <a href="#services" class="menu_link">Услуги</a></li>
             <li class="menu_item"><a href="#approach" class="menu_link">Подход</a></li>
             <li class="menu_item"><a href="#steps" class="menu_link"> Шаги</a></li>
@@ -65,9 +68,9 @@
             <li class="menu_item"><a href="#contacts" class="menu_link"> Контакты</a></li>
           </ul>
           <div class="menu__contacts">
-            <a href="#">
+            <!-- <a href="#"> -->
               <div class="menu__contacts_phone">+7 (846) 205-18-04</div>
-            </a>
+            <!-- </a> -->
 
           </div>
 
@@ -192,7 +195,7 @@
         <div class="approach__column">
 
           <div class="approach__column_slash">//A</div>
-          <div class="approach__column_progressbar-1"></div>
+          <!-- <div class="approach__column_progressbar-1"></div> -->
           <div class="approach__column_header">Без vendor lock</div>
           <div class="approach__column_descr">Используем open source решения в построении инфраструктуры. Никаких доп
             затрат на лицензии, техподдержку и консультантов</div>
@@ -200,7 +203,7 @@
         
         <div class="approach__column">
           <div class="approach__column_slash">//B</div>
-          <div class="approach__column_progressbar-2"></div>
+          <!-- <div class="approach__column_progressbar-2"></div> -->
           <div class="approach__column_header">Тестирование</div>
           <div class="approach__column_descr">Проверяем что система работает корректно, если нужно — проверяем её на
             отказоустойчивость</div>
@@ -211,7 +214,7 @@
       <div class="approach__row">
         <div class="approach__column">
           <div class="approach__column_slash">//C</div>
-          <div class="approach__column_progressbar-3"></div>
+          <!-- <div class="approach__column_progressbar-3"></div> -->
           <div class="approach__column_header">Документирование</div>
           <div class="approach__column_descr">После миграции готовим описание архитектуры чтобы ничего не забыть и ваши
             специалисты могли быстро разобраться</div>
@@ -219,7 +222,7 @@
         
         <div class="approach__column">
           <div class="approach__column_slash">//D</div>
-          <div class="approach__column_progressbar-4"></div>
+          <!-- <div class="approach__column_progressbar-4"></div> -->
           <div class="approach__column_header">Безопасность и работа с командой</div>
           <div class="approach__column_descr">Учитываем ваши приоритеты и особенности задачи, думаем о безопасности в
             условиях новой инфраструктуры</div>
